--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,2 +1,8 @@
-<h3>welcome works!</h3>
-<h1> {{message}} </h1>
+<br> <br> <br>
+<h1 align="center">
+    <font size="10px" color="navy">Welcome to ORS</font>
+</h1>
+<br> <br> <br> <br> <br> <br> <br>
+<br> <br> <br> <br> <br> <br> <br>
+<br> <br> <br> <br>
+<br> <br>
