--- a/src/app/user/user-list.component.html
+++ b/src/app/user/user-list.component.html
@@ -42,8 +42,8 @@
         <td style="text-align: center;">{{m.password}}</td>
         <td style="text-align: center;">{{m.dob | date: 'dd-MM-yyyy'}}</td>
         <td style="text-align: center;">{{m.roleName}}</td>
-        <td style="text-align: center;"> <a href="#">edit
-            </a></td>
+        <td style="text-align: center;"> <a (click)="edit( '/user/' +  m.id)" style="color: blue;">edit
+        </a></td>
     </tr>
 </table>
 <br>
